--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,9 @@
             "dest": "/backend/app.py"
         },
         {
+            "handle": "filesystem"
+        },
+        {
             "src": "/(.*)",
             "dest": "/index.html"
         }
