Standardize API calls, fix CORS credentials support, and centralize backend URL handling

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Backend API URL
-# Point to your deployed PythonAnywhere backend
-VITE_API_BASE_URL=https://turbo007.pythonanywhere.com
+# LOCAL DEVELOPMENT: Comment out the line below to use the local server (localhost:5000)
+# PRODUCTION: Use the PythonAnywhere URL
+# VITE_API_BASE_URL=https://turbo007.pythonanywhere.com/api
