Implement auditorium-specific booking filtering and backfill legacy bookings

--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-# Backend API URL
-# LOCAL DEVELOPMENT: Comment out the line below to use the local server (localhost:5000)
-# PRODUCTION: Use the PythonAnywhere URL
-# VITE_API_BASE_URL=https://turbo007.pythonanywhere.com/api
+VITE_API_BASE_URL=https://TURBO007.pythonanywhere.com
